# markov-engine

./: .gitignore  LICENSE  README.md  pyproject.toml
.claude/skills/incremental-commits/: SKILL.md
.claude/skills/ogilvy/: SOURCE.txt
docs/: index.html
markov_engine/: __init__.py  _local.py  cli.py  clustering.py  config.py  embeddings.py  entities.py  extract.py  generate.py  growth.py  ingest.py  llm.py  search.py  transcribe.py  vectors.py
markov_engine/store/: __init__.py  base.py  records.py  sqlite.py
tests/: conftest.py  test_clustering.py  test_growth_split.py  test_key_points.py  test_ratelimit.py  test_seed_steer.py  test_source_metadata.py  test_vectors.py
